Adding Commit for Discussion 7.1

--- a/week-7/forke-discussion-7.1.html
+++ b/week-7/forke-discussion-7.1.html
@@ -33,10 +33,10 @@
         <h1>Embedded Javascript</h1>
 
         <p id ="chicken" onclick=color()>I Like Chicken!</p>
-        
+
       <!-- Change the font size from 12px to xx large font -->
-        <script>      
-        //Create Function to Change Size and Color
+        <script>
+        //Create Function to Change Size
           function color() {
               document.getElementByID("chicken").style.fontSize = "xx-large";
           }
